# vmware-tempest-plugin

./: .gitignore  README.md  README.rst  setup.cfg  setup.py  tempest.conf
vmware_tempest_plugin/: clients.py  config.py  plugin.py  test.py
vmware_tempest_plugin/services/volume/: __init__.py
vmware_tempest_plugin/services/volume/base/: base_volumes_client.py
vmware_tempest_plugin/services/volume/v1/: __init__.py
vmware_tempest_plugin/services/volume/v1/json/: volumes_client.py
vmware_tempest_plugin/services/volume/v2/: __init__.py
vmware_tempest_plugin/services/volume/v2/json/: volumes_client.py
vmware_tempest_plugin/tests/: clients.py
vmware_tempest_plugin/tests/api/compute/: base.py
vmware_tempest_plugin/tests/api/compute/admin/: test_flavors.py  test_servers.py  test_services.py
vmware_tempest_plugin/tests/api/identity/: __init__.py  base.py
vmware_tempest_plugin/tests/api/identity/admin/: __init__.py  test_tokens.py
vmware_tempest_plugin/tests/api/network/: base.py
vmware_tempest_plugin/tests/api/network/admin/: test_vlan_network_action.py
vmware_tempest_plugin/tests/api/volume/: base.py
vmware_tempest_plugin/tests/api/volume/admin/: test_volume_hosts.py  test_volume_pools.py  test_volume_snapshots_actions.py  test_volume_types.py  test_volumes_actions.py  test_volumes_list.py
