[metadata]
name = vmware-tempest-plugin
summary = OpenStack for Vmware environment Functional Tests
description-file =
    README.rst
author = Vsettan
author-email = lixx@vsettan.com.cn
home-page = https://github.com/lilingxing20/vmware-tempest-plugin.git
classifier =
    Environment :: OpenStack
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Internet :: Name Service (DNS)

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    vmware_tempest_plugin

[entry_points]
tempest.test_plugins =
    vmware_plugin = vmware_tempest_plugin.plugin:VmwareTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
